[package]
name = "analog-account-decoder"
version = "1.9.0"
description = "Analog account decoder"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog-labs/analog"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-account-decoder"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.69"
analog-config-program = { path = "../programs/config", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
spl-token-v2-0 = { package = "spl-token", version = "=3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"
zstd = "0.9.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
