[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-accounts-bench"
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
log = "0.4.14"
rayon = "1.5.1"
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
clap = "2.33.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
