[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-accounts-bench"
version = "1.8.2"
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
publish = false

[dependencies]
log = "0.4.14"
rayon = "1.5.1"
analog-logger = { path = "../logger", version = "=1.8.2" }
analog-runtime = { path = "../runtime", version = "=1.8.2" }
analog-measure = { path = "../measure", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-version = { path = "../version", version = "=1.8.2" }
clap = "2.33.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
