[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-accounts-cluster-bench"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
analog-account-decoder = { path = "../account-decoder", version = "=1.9.0" }
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }
analog-core = { path = "../core", version = "=1.9.0" }
analog-faucet = { path = "../faucet", version = "=1.9.0" }
analog-gossip = { path = "../gossip", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-net-utils = { path = "../net-utils", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-transaction-status = { path = "../transaction-status", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
spl-token-v2-0 = { package = "spl-token", version = "=3.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
analog-local-cluster = { path = "../local-cluster", version = "=1.9.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
