[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-accountsdb-plugin-interface"
description = "The Analog AccountsDb plugin interface."
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/analog-validator"

[dependencies]
log = "0.4.11"
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
