[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-accountsdb-plugin-manager"
description = "The Analog AccountsDb plugin manager."
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-validator"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.1"
log = "0.4.11"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.69"
analog-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-metrics = { path = "../metrics", version = "=1.9.0" }
analog-rpc = { path = "../rpc", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
