[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-accountsdb-plugin-postgres"
description = "The Analog AccountsDb plugin for PostgreSQL database."
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/analog-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
log = "0.4.14"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.69"
analog-accountsdb-plugin-interface = { path = "../accountsdb-plugin-interface", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-metrics = { path = "../metrics", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
thiserror = "1.0.30"
tokio-postgres = "0.7.4"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
