[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-banking-bench"
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
analog-core = { path = "../core", version = "=1.9.0" }
analog-gossip = { path = "../gossip", version = "=1.9.0" }
analog-ledger = { path = "../ledger", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-perf = { path = "../perf", version = "=1.9.0" }
analog-poh = { path = "../poh", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
