[package]
name = "analog-banks-interface"
version = "1.9.0"
description = "Analog banks RPC interface"
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/analog-banks-interface"
edition = "2018"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
tarpc = { version = "0.26.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "analog_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
