[package]
name = "analog-banks-interface"
version = "1.8.2"
description = "Analog banks RPC interface"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-banks-interface"
edition = "2018"

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
tarpc = { version = "0.26.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "analog_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
