[package]
name = "analog-banks-server"
version = "1.9.0"
description = "Analog banks server"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-banks-server"
edition = "2018"

[dependencies]
bincode = "1.3.3"
futures = "0.3"
analog-banks-interface = { path = "../banks-interface", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-send-transaction-service = { path = "../send-transaction-service", version = "=1.9.0" }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "analog_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
