[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-bench-tps"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
analog-core = { path = "../core", version = "=1.9.0" }
analog-genesis = { path = "../genesis", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }
analog-faucet = { path = "../faucet", version = "=1.9.0" }
analog-gossip = { path = "../gossip", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-metrics = { path = "../metrics", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-net-utils = { path = "../net-utils", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }

[dev-dependencies]
serial_test = "0.5.1"
analog-local-cluster = { path = "../local-cluster", version = "=1.9.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
