[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-bench-tps"
version = "1.8.2"
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.14"
rayon = "1.5.1"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
analog-core = { path = "../core", version = "=1.8.2" }
analog-genesis = { path = "../genesis", version = "=1.8.2" }
analog-client = { path = "../client", version = "=1.8.2" }
analog-faucet = { path = "../faucet", version = "=1.8.2" }
analog-gossip = { path = "../gossip", version = "=1.8.2" }
analog-logger = { path = "../logger", version = "=1.8.2" }
analog-metrics = { path = "../metrics", version = "=1.8.2" }
analog-measure = { path = "../measure", version = "=1.8.2" }
analog-net-utils = { path = "../net-utils", version = "=1.8.2" }
analog-runtime = { path = "../runtime", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-streamer = { path = "../streamer", version = "=1.8.2" }
analog-version = { path = "../version", version = "=1.8.2" }

[dev-dependencies]
serial_test = "0.5.1"
analog-local-cluster = { path = "../local-cluster", version = "=1.8.2" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
