[package]
name = "analog-bucket-map"
version = "1.9.0"
description = "analog-bucket-map"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-bucket-map"
readme = "../README.md"
repository = "https://github.com/analog-labs/analog"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rayon = "1.5.0"
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
memmap2 = "0.5.0"
log = { version = "0.4.11" }
analog-measure = { path = "../measure", version = "=1.9.0" }
rand = "0.7.0"
fs_extra = "1.2.0"
tempfile = "3.2.0"

[lib]
crate-type = ["lib"]
name = "analog_bucket_map"

[[bench]]
name = "bucket_map"
