[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/analog-cli-output"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.16.2"
serde = "1.0.130"
serde_json = "1.0.69"
analog-account-decoder = { path = "../account-decoder", version = "=1.9.0" }
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-transaction-status = { path = "../transaction-status", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
