[package]
authors = ["Analog Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "analog-cli"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.0"
repository = "https://github.com/analog-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/analog-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
console = "0.15.0"
const_format = "0.2.22"
log = "0.4.14"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.69"
analog-account-decoder = { path = "../account-decoder", version = "=1.9.0" }
analog-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.9.0" }
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-cli-config = { path = "../cli-config", version = "=1.9.0" }
analog-cli-output = { path = "../cli-output", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }
analog-config-program = { path = "../programs/config", version = "=1.9.0" }
analog-faucet = { path = "../faucet", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-program-runtime = { path = "../program-runtime", version = "=1.9.0" }
solana_rbpf = "=0.2.14"
analog-remote-wallet = { path = "../remote-wallet", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-transaction-status = { path = "../transaction-status", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"

[dev-dependencies]
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-test-validator = { path = "../test-validator", version = "=1.9.0" }
tempfile = "3.2.0"

[[bin]]
name = "solana"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
