[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-cli"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.2"
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.1.9", features = ["termination"] }
console = "0.14.1"
const_format = "0.2.21"
log = "0.4.14"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = "1.0.149"
serde_derive = "1.0.103"
serde_json = "1.0.68"
analog-account-decoder = { path = "../account-decoder", version = "=1.8.2" }
analog-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.8.2" }
analog-clap-utils = { path = "../clap-utils", version = "=1.8.2" }
analog-cli-config = { path = "../cli-config", version = "=1.8.2" }
analog-cli-output = { path = "../cli-output", version = "=1.8.2" }
analog-client = { path = "../client", version = "=1.8.2" }
analog-config-program = { path = "../programs/config", version = "=1.8.2" }
analog-faucet = { path = "../faucet", version = "=1.8.2" }
analog-logger = { path = "../logger", version = "=1.8.2" }
solana_rbpf = "=0.2.14"
analog-remote-wallet = { path = "../remote-wallet", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-transaction-status = { path = "../transaction-status", version = "=1.8.2" }
analog-version = { path = "../version", version = "=1.8.2" }
analog-vote-program = { path = "../programs/vote", version = "=1.8.2" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.29"
tiny-bip39 = "0.8.1"
bip32 = "0.2.2"
rand_core = { version = "0.6", features = ["std"] }

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]

[dev-dependencies]
analog-core = { path = "../core", version = "=1.8.2" }
analog-streamer = { path = "../streamer", version = "=1.8.2" }
tempfile = "3.2.0"

[[bin]]
name = "analog"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
