[package]
name = "analog-client"
version = "1.8.2"
description = "Analog Client"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog/testnet"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-client"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.0"
indicatif = "0.16.2"
jsonrpc-core = "18.0.0"
log = "0.4.14"
rayon = "1.5.1"
reqwest = { version = "0.11.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.141"
serde_derive = "1.0.103"
serde_json = "1.0.68"
analog-account-decoder = { path = "../account-decoder", version = "=1.8.2" }
analog-clap-utils = { path = "../clap-utils", version = "=1.8.2" }
analog-faucet = { path = "../faucet", version = "=1.8.2" }
analog-net-utils = { path = "../net-utils", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-transaction-status = { path = "../transaction-status", version = "=1.8.2" }
analog-version = { path = "../version", version = "=1.8.2" }
analog-vote-program = { path = "../programs/vote", version = "=1.8.2" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.15.0"
url = "2.2.2"

[dev-dependencies]
assert_matches = "1.5.0"
jsonrpc-http-server = "18.0.0"
analog-logger = { path = "../logger", version = "=1.8.2" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
