[package]
name = "analog-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.8.2"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-core"
readme = "../README.md"
repository = "https://github.com/analog/testnet"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
license = "Apache-2.0"
edition = "2018"

[badges]
codecov = { repository = "analog/analog", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.4"
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.7.2", features = ["tls"]}
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.1"
log = "0.4.14"
lru = "0.6.6"
rand = "0.7.0"
rand_chacha = "0.2.2"
raptorq = "1.6.4"
rayon = "1.5.1"
retain_mut = "0.1.3"
serde = "1.0.140"
serde_derive = "1.0.103"
analog-account-decoder = { path = "../account-decoder", version = "=1.8.2" }
analog-client = { path = "../client", version = "=1.8.2" }
analog-config-program = { path = "../programs/config", version = "=1.8.2" }
analog-entry = { path = "../entry", version = "=1.8.2" }
analog-gossip = { path = "../gossip", version = "=1.8.2" }
analog-ledger = { path = "../ledger", version = "=1.8.2" }
analog-logger = { path = "../logger", version = "=1.8.2" }
analog-measure = { path = "../measure", version = "=1.8.2" }
analog-metrics = { path = "../metrics", version = "=1.8.2" }
analog-net-utils = { path = "../net-utils", version = "=1.8.2" }
analog-perf = { path = "../perf", version = "=1.8.2" }
analog-poh = { path = "../poh", version = "=1.8.2" }
analog-program-test = { path = "../program-test", version = "=1.8.2" }
analog-rpc = { path = "../rpc", version = "=1.8.2" }
analog-replica-lib = { path = "../replica-lib", version = "=1.8.2" }
analog-runtime = { path = "../runtime", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-frozen-abi = { path = "../frozen-abi", version = "=1.8.2" }
analog-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.8.2" }
analog-streamer = { path = "../streamer", version = "=1.8.2" }
analog-transaction-status = { path = "../transaction-status", version = "=1.8.2" }
analog-vote-program = { path = "../programs/vote", version = "=1.8.2" }
tempfile = "3.2.0"
thiserror = "1.0"
analog-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.8.2" }
tokio = { version = "1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
matches = "0.1.9"
reqwest = { version = "0.11.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.68"
serial_test = "0.5.1"
analog-program-runtime = { path = "../program-runtime", version = "=1.8.2" }
analog-stake-program = { path = "../programs/stake", version = "=1.8.2" }
analog-version = { path = "../version", version = "=1.8.2" }
static_assertions = "1.1.0"
systemstat = "0.1.8"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "blockstore"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
