[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-dos"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
publish = false

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"
analog-core = { path = "../core", version = "=1.9.0" }
analog-gossip = { path = "../gossip", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-net-utils = { path = "../net-utils", version = "=1.9.0" }
analog-perf = { path = "../perf", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
