[package]
name = "analog-download-utils"
version = "1.8.2"
description = "Analog Download Utils"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-download-utils"
edition = "2018"

[dependencies]
console = "0.14.1"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.4", default-features = false, features = ["blocking", "rustls-tls", "json"] }
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-runtime = { path = "../runtime", version = "=1.8.2" }

[lib]
crate-type = ["lib"]
name = "analog_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
