[package]
name = "analog-entry"
version = "1.8.2"
description = "Analog Entry"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-poh"
edition = "2018"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.153"
analog-measure = { path = "../measure", version = "=1.8.2" }
analog-merkle-tree = { path = "../merkle-tree", version = "=1.8.2" }
analog-metrics = { path = "../metrics", version = "=1.8.2" }
analog-perf = { path = "../perf", version = "=1.8.2" }
analog-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.8.2" }
analog-sdk = { path = "../sdk", version = "=1.8.2" }

[dev-dependencies]
matches = "0.1.9"
analog-logger = { path = "../logger", version = "=1.8.2" }

[lib]
crate-type = ["lib"]
name = "analog_entry"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
