[package]
name = "analog-faucet"
version = "1.9.0"
description = "Analog Faucet"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-faucet"
edition = "2018"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-cli-config = { path = "../cli-config", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-metrics = { path = "../metrics", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "analog_faucet"

[[bin]]
name = "analog-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
