[package]
name = "analog-frozen-abi"
version = "1.9.0"
description = "Analog Frozen ABI"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog-labs/analog"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-frozen-abi"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bs58 = "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
sha2 = "0.9.8"
analog-frozen-abi-macro = { path = "macro", version = "=1.9.0" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
analog-logger = { path = "../logger", version = "=1.9.0" }
generic-array = { version = "0.14.4", default-features = false, features = ["serde", "more_lengths"]}
memmap2 = "0.5.0"

[build-dependencies]
rustc_version = "0.4"
