[package]
name = "analog-genesis-utils"
version = "1.8.2"
description = "Analog Genesis Utils"
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
repository = "https://github.com/analog/testnet"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-download-utils"
edition = "2018"

[dependencies]
analog-sdk = { path = "../sdk", version = "=1.8.2" }
analog-download-utils = { path = "../download-utils", version = "=1.8.2" }
analog-runtime = { path = "../runtime", version = "=1.8.2" }

[lib]
crate-type = ["lib"]
name = "analog_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
